# website

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  LICENSE  Makefile  README.md  apps.html  biome.json  code.html  db.sqlite3  docker-compose.yml  gulpfile.js  index.html  links.html  package-lock.json  package.json  pyproject.toml  requirements.txt  skills.html  styles.css  webpack.config.js
.github/workflows/: dev.yml  develop.yml  main.yml  master.yml  prod.yml  release.yml
app/: form.py  main.py  models.py
assets/scripts/: base.js
assets/styles/: base.scss  layout.scss
base/: admin.py  context_processors.py  forms.py  middleware.py  models.py  views.py
base/migrations/: 0001_initial.py
base/templates/: index.html
base/templates/base/: index.html
dallen/: secret_template.py  settings.py  urls.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn.sh  start.sh
docker/caddy/: Caddyfile  Caddyfile.dev  Caddyfile.local  Dockerfile
docker/flask/: Dockerfile  gunicorn.sh
images/: logos.afphoto
old/: manage.py  package-lock.json  package.json  requirements.txt
old/base/: admin.py
old/base/migrations/: 0002_auto_20161023_0033.py
old/dallen/: settings.py  wsgi.py
src/: index.html  index.js  old_index.html  styles.css
src/icons/: site.webmanifest
src/images/: logos.afphoto
src/styles/: base.scss  layout.scss
static/css/: base.css  base.min.css  layout.css  layout.min.css  uikit.min.css
static/js/: base.js  base.min.js  codemirror.min.js  markdown.min.js  marked.min.js
styles/: layout.scss
(+3 files in other folders)
