[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dallen-website"
description = "Basic Flask backend for dallen.co"
repository = "git@github.com:damienallen/dallen.git"
version = "3.0"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2"
flask-wtf = "^1.0"
gunicorn = "^20.1"
sendgrid = "^6.9"
email_validator = "^1.3"
requests = "^2.28"

[tool.poetry.dev-dependencies]
black = "^22.12"
