[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dallen-website"
description = "Basic Flask backend for dallen.co"
repository = "git@github.com:damienallen/website.git"
version = "2023.0"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.11"
email_validator = "^1.3"
flask = "^2.3"
flask-wtf = "^1.0"
gunicorn = "^20.1"
requests = "^2.28"
sendgrid = "^6.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12"
ruff = "^0.0.218"
