
[tool.poetry]
name = "dallen-website"
description = "Basic Flask app for email form"
version = "2024.0"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.11"
email_validator = "~1"
flask = "^2.3"
flask-wtf = "^1.2"
gunicorn = "^21.2"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
